--- a/views/trangchu.ejs
+++ b/views/trangchu.ejs
@@ -4,7 +4,7 @@
         <title>demo socket io</title>
         <script src="jquery.js"></script>
         <!-- thu vien socket.io phia client -->
-        <script src="socket.io/socket.io.js"></script>
+        <script src="https://vanquangonline.herokuapp.com/socket.io/socket.io.js"></script>
         <script src="xuli.js"></script>
         <link rel="stylesheet" type="text/css" href="layout.css" />
     </head>
